Fix HUD overflow issue for some plugins (Icon Picker)

--- a/src/resources/src/scss/navigation.scss
+++ b/src/resources/src/scss/navigation.scss
@@ -112,6 +112,10 @@
     overflow: visible;
 }
 
+.nav-editor-hud .main-container {
+    overflow-y: auto !important;
+}
+
 .nav-editor-hud .hud-footer {
     padding: 14px 20px;
 }
